History of this buildout
========================

5.0.6 (unreleased)
------------------

- Update find-links to Plone release 4.2.4 & thirdparty on dist.plone.org
  [fred]
  
- Remove lxml (z3c.rescipe.staticlxml) from the parts as the lxml should
  nowadays be able to compile fine on both OS X and linux if the necessary
  libraries are present (libxml2-dev, libxslt-dev).
  [fred]

5.0.5 (2013-03-25)
------------------

- Hide the personal bar viewlet.
  [maurits]


5.0.4 (2013-03-25)
------------------

- Styling.
  [maurits]


5.0.3 (2013-03-15)
------------------

- Remove some more css and javascript and add note to uninstall kupu.
  [maurits]


5.0.2 (2013-03-15)
------------------

- Cleanup skin layers.  We created a Minaraad Theme skin layer
  selection when we started on the migration back in 2011, but we do
  not use this anymore.  We update Plone Default now.  This at least
  means we can we now find pyproxy_spinner.gif.
  [maurits]


5.0.1 (2013-03-15)
------------------

- Sort projects by year plus project number and show both.
  [maurits]

- Refuse to send an e-mail for newsletters, etcetera, when this e-mail
  has already been sent in the last thirty minutes.  This will raise
  an exception and show a traceback.  We also show a warning on the
  email_out page with the date and time when this item was sent.
  Sending a test e-mail is always possible.
  [maurits]

- Avoid writing to the database every time we view a meeting.
  [maurits]

- Only update the main attachment count when an agenda item has at
  least one attachment.
  [maurits]

- Fixed possible KeyError on company when member has no such property.
  [maurits]

- Fixed logic error in the display of numbering of attachments in
  meetings.
  [maurits]

- Sort meetings by start date.
  [maurits]


5.0 (2013-03-13)
----------------

- Use officially released Products.PluggableAuthService 1.10.0 and
  collective.emaillogin4 1.3.
  [maurits]

- Use Plone 4.2.4.
  [maurits]
