@@ -122,7 +122,7 @@ eggs =
     elementtree
     Products.DataGridField
 #    Products.FCKeditor
-#    Products.SecureMaildropHost
+    Products.SecureMaildropHost
     Products.SimpleAttachment
     collective.recaptcha
     jquery.pyproxy
@@ -141,7 +141,7 @@ zcml =
 resources = ${buildout:directory}/resources
 locales = ${buildout:directory}/locales
 products =
-#    ${maildrop:location}
+    ${maildrop:location}
 
 
 [debugclient]
@@ -157,7 +157,7 @@ zope-conf-additional =
 
 [maildrop]
 recipe = infrae.maildrophost
-smtp_host = mail.zestsoftware.nl
+smtp_host = smtp-plone.mmis.be
 smtp_port = 25
 version = 1.22
 supervised_daemon = 1
@@ -211,7 +211,7 @@ plugins = superlance
 programs =
       10 instance ${buildout:bin-directory}/instance [console]
       30 varnish (exitcodes=0) ${buildout:directory}/bin/varnish [-p cli_timeout=10]
-#      40 maildrop ${buildout:bin-directory}/maildrop [start] true
+      40 maildrop ${buildout:bin-directory}/maildrop [start] true
 eventlisteners =
       memmon TICK_60 ${buildout:bin-directory}/memmon [-p instance=1300MB -s "python ${buildout:directory}/scripts/sendmail.py" -m m.van.rees@zestsoftware.nl]
 
