@@ -18,8 +18,15 @@ eggs +=
     Products.DCWorkflowGraph
     Products.DocFinderTab
 #    Products.PDBDebugMode
-    Products.PrintingMailHost
+#    Products.PrintingMailHost
     Products.enablesettrace
     plone.reload
     teamrubber.theoracle
 #    z3c.deadlockdebugger
+
+
+[maildrop]
+smtp_host = localhost
+smtp_port = 8025
+version = 1.22
+supervised_daemon = 1
